fixed : [animation] overflow hidden CSS class

--- a/assets/front/scss/_1_5_base.scss
+++ b/assets/front/scss/_1_5_base.scss
@@ -333,4 +333,4 @@
 
 // SEPT 2020 : Animate
 .sek-animate-candidate { opacity: 0;}
-.sek-overflow-hidden-when-animating [data-sek-level] { overflow: hidden;}
+.sek-overflow-hidden-while-animating { overflow: hidden;}
